crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__if__missing_test_expr_1.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/if/missing_test_expr_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..64,
        body: [
            Expr(
                ExprStmt {
                    range: 53..57,
                    value: If(
                        IfExpr {
                            range: 53..57,
                            test: Name(
                                NameExpr {
                                    range: 57..57,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            body: Name(
                                NameExpr {
                                    range: 53..54,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            orelse: Name(
                                NameExpr {
                                    range: 57..57,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 59..64,
                    value: BinOp(
                        BinOpExpr {
                            range: 59..64,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 59..60,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 63..64,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Missing test expression, followed by an expression
2 | x if
  |     ^ Syntax Error: Expected an expression
3 | 
4 | 1 + 1
  |
